#355 Update SpongeGradle to 2.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ slf4jVersion=1.7.25
 jdaVersion=4.2.0_214
 reflectionsVersion=0.9.11
 hamcrestVersion=2.0.0.0
-spongeApiVersion=8.0.0
+spongeApiVersion=8.0.0-SNAPSHOT
 minecraftVersion=1.16.5
 hibernateVersion=5.5.5.Final
 javaxPersistenceVersion=2.2
