--- a/.github/workflows/owasp.yml
+++ b/.github/workflows/owasp.yml
@@ -14,5 +14,5 @@ jobs:
           java-version: 16
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build all
+      - name: Analyze dependencies
         run: ./gradlew dependencyCheckAnalyze
