--- a/hartshorn-proxy/build.gradle
+++ b/hartshorn-proxy/build.gradle
@@ -1,9 +1,9 @@
 apply from: "$rootDir/parent.gradle"
 
 dependencies {
-    apiInclude project(':hartshorn-exceptions')
-    apiInclude project(':hartshorn-bootstrap')
-    apiInclude project(':hartshorn-di').sourceSets.impl.output
+    apiInclude 'org.dockbox.hartshorn:hartshorn-exceptions'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    apiInclude project(":hartshorn-di").sourceSets.impl.output
 
     apiInclude "org.reflections:reflections:$reflectionsVersion"
 }
