--- a/hartshorn-bootstrap/build.gradle
+++ b/hartshorn-bootstrap/build.gradle
@@ -16,9 +16,10 @@
  */
 
 dependencies {
-    apiInclude project(':hartshorn-core')
-    apiInclude project(':hartshorn-util')
-    apiInclude project(':hartshorn-di')
-    apiInclude project(':hartshorn-exceptions')
-    apiShare project(':hartshorn-di').sourceSets.impl.output
+    apiInclude 'org.dockbox.hartshorn:hartshorn-core'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-util'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-di'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-exceptions'
+
+    apiShare project(":hartshorn-di").sourceSets.impl.output
 }
