--- a/hartshorn-di/build.gradle
+++ b/hartshorn-di/build.gradle
@@ -16,10 +16,10 @@
  */
 
 dependencies {
-    apiShare project(':hartshorn-core')
-    apiShare project(':hartshorn-util')
+    apiShare 'org.dockbox.hartshorn:hartshorn-core'
+    apiShare 'org.dockbox.hartshorn:hartshorn-util'
 
-    testImplementation project(':hartshorn-bootstrap')
+    testImplementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
 
     apiShare "javax.inject:javax.inject:$javaxInjectVersion"
     apiInclude "org.reflections:reflections:$reflectionsVersion"
