--- a/hartshorn-events/build.gradle
+++ b/hartshorn-events/build.gradle
@@ -18,7 +18,7 @@
 apply from: "$rootDir/parent.gradle"
 
 dependencies {
-    apiInclude project(':hartshorn-bootstrap')
+    apiInclude 'org.dockbox.hartshorn:hartshorn-bootstrap'
 
-    include project(':hartshorn-tasks')
+    include 'org.dockbox.hartshorn:hartshorn-tasks'
 }
