--- a/hartshorn-util/build.gradle
+++ b/hartshorn-util/build.gradle
@@ -16,9 +16,9 @@
  */
 
 dependencies {
-    apiShare project(':hartshorn-core')
+    apiShare 'org.dockbox.hartshorn:hartshorn-core'
 
-    testImplementation project(':hartshorn-di').sourceSets.impl.output
+    testImplementation project(":hartshorn-di").sourceSets.impl.output
 
     apiInclude "org.reflections:reflections:$reflectionsVersion"
 
