Register JDK16 for Jitpack builds

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ group project.pluginGroup
 description 'Common sources for Hartshorn services'
 def date = LocalDate.now().toString()
 
+sourceCompatibility = 16
+targetCompatibility = 16
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(16)
