--- a/build.gradle
+++ b/build.gradle
@@ -132,12 +132,7 @@ allprojects {
             all*.exclude group: 'junit', module: 'junit'
         }
 
-        compileJava {
-            options.compilerArgs << '-parameters'
-            options.encoding = 'UTF-8'
-        }
-
-        compileTestJava {
+        tasks.withType(JavaCompile) {
             options.compilerArgs << '-parameters'
             options.encoding = 'UTF-8'
         }
