#399 Add MariaDB support

--- a/hartshorn-persistence/build.gradle
+++ b/hartshorn-persistence/build.gradle
@@ -35,10 +35,12 @@ dependencies {
 
     testImplementation 'mysql:mysql-connector-java:8.0.26'
     testImplementation 'org.postgresql:postgresql:42.2.23'
+    testImplementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 
     testImplementation "org.testcontainers:testcontainers:1.16.0"
     testImplementation "org.testcontainers:junit-jupiter:1.16.0"
 
     testImplementation "org.testcontainers:mysql:1.16.0"
     testImplementation "org.testcontainers:postgresql:1.16.0"
+    testImplementation "org.testcontainers:mariadb:1.16.0"
 }
