#399 Register test container and SQL versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,10 @@ woodstoxVersion=4.4.1
 derbyVersion=10.8.2.2
 imageScalingVersion=0.8.6
 jhlabsFiltersVersion=2.0.235-1
+testContainersVersion=1.16.0
+mySqlConnectorVersion=8.0.26
+postgreSqlVersion=42.2.23
+mariaDbClientVersion=2.7.4
 
 # Gradle plugin versions
 licenserVersion=0.5.0
