--- a/hartshorn-config/build.gradle
+++ b/hartshorn-config/build.gradle
@@ -20,4 +20,7 @@ apply from: "$rootDir/parent.gradle"
 dependencies {
     apiInclude 'org.dockbox.hartshorn:hartshorn-bootstrap'
     apiInclude 'org.dockbox.hartshorn:hartshorn-persistence'
+
+    apiInclude "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    apiInclude "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
 }
