--- a/hartshorn-commands/build.gradle
+++ b/hartshorn-commands/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     apiInclude 'org.dockbox.hartshorn:hartshorn-events'
     apiInclude 'org.dockbox.hartshorn:hartshorn-proxy'
 
+    include 'org.dockbox.hartshorn:hartshorn-tasks'
+
     testImplementation project(":hartshorn-i18n").sourceSets.impl.output
 }
