--- a/hartshorn-boot/build.gradle
+++ b/hartshorn-boot/build.gradle
@@ -47,10 +47,10 @@ dependencies {
         }
     }
 
-    // Additional shaded dependencies, these are not available on the platform by default
     includeShadow "org.hibernate:hibernate-core:$hibernateVersion"
     includeShadow "org.apache.derby:derby:$derbyVersion"
     includeShadow "javax.xml.bind:jaxb-api:$javaxJaxbVersion"
+    includeShadow "org.slf4j:slf4j-simple:$slf4jVersion"
 }
 
 tasks.build {
@@ -59,13 +59,6 @@ tasks.build {
 
 shadowJar {
     configurations = [project.configurations.shadow]
-    relocate 'com.fasterxml.jackson', 'org.dockbox.hartshorn.internal.jackson'
-    relocate 'org.apache.commons', 'org.dockbox.hartshorn.internal.apache.commons'
-
-    dependencies {
-        exclude(dependency('org.projectlombok:lombok'))
-        exclude(dependency('org.slf4j:slf4j-api'))
-    }
 }
 
 build.finalizedBy copyArtifacts
