--- a/hartshorn-discord/build.gradle
+++ b/hartshorn-discord/build.gradle
@@ -1,13 +1,13 @@
 apply from: "$rootDir/parent.gradle"
 
 dependencies {
-    compileOnly 'org.dockbox.hartshorn:hartshorn-bootstrap'
-    compileOnly 'org.dockbox.hartshorn:hartshorn-i18n'
-    compileOnly 'org.dockbox.hartshorn:hartshorn-events'
-    compileOnly 'org.dockbox.hartshorn:hartshorn-config'
-    compileOnly 'org.dockbox.hartshorn:hartshorn-commands'
-
+    apiInclude 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-i18n'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-config'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-commands'
+    apiInclude 'org.dockbox.hartshorn:hartshorn-events'
     apiInclude "com.github.ygimenez:Pagination-Utils:$discordPaginationVersion"
+
     apiShare("net.dv8tion:JDA:$jdaVersion") {
         exclude module: 'opus-java'
     }
