--- a/gradle.properties
+++ b/gradle.properties
@@ -24,8 +24,8 @@ projectVersion=4.2.3
 junitVersion=5.3.2
 mockitoVersion=3.10.0
 jetbrainsAnnotationsVersion=19.0.0
-slf4jVersion=1.7.25
 jdaVersion=4.3.0_277
+slf4jVersion=1.7.32
 reflectionsVersion=0.9.11
 hamcrestVersion=2.0.0.0
 hibernateVersion=5.5.5.Final
@@ -44,6 +44,8 @@ mySqlConnectorVersion=8.0.26
 postgreSqlVersion=42.2.23
 mariaDbClientVersion=2.7.4
 log4jVersion=2.7
+javaxServletVersion=3.1.0
+jettyVersion=9.4.44.v20210927
 
 # Gradle plugin versions
 licenserVersion=0.5.0
