--- a/build.gradle
+++ b/build.gradle
@@ -174,7 +174,10 @@ allprojects {
             testImplementation testFixtures(project(":hartshorn-test"))
 
             testImplementation "org.slf4j:slf4j-api:$slf4jVersion"
-            testImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
+
+            testImplementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
+            testImplementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+            testImplementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
         }
 
         task copyArtifacts {
