--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -54,7 +54,10 @@ dependencies {
     apiInclude "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:$jacksonVersion"
     apiInclude "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jacksonVersion"
 
-    apiInclude "org.slf4j:slf4j-simple:$slf4jVersion"
+
+    apiInclude "org.apache.logging.log4j:log4j-api:$log4jVersion"
+    apiInclude "org.apache.logging.log4j:log4j-core:$log4jVersion"
+    apiInclude "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
 
     processor "org.projectlombok:lombok:$lombokVersion"
 
