--- a/gradle.properties
+++ b/gradle.properties
@@ -42,6 +42,7 @@ testContainersVersion=1.16.0
 mySqlConnectorVersion=8.0.26
 postgreSqlVersion=42.2.23
 mariaDbClientVersion=2.7.4
+log4jVersion=2.7
 
 # Gradle plugin versions
 licenserVersion=0.5.0
