--- a/hartshorn-test/build.gradle
+++ b/hartshorn-test/build.gradle
@@ -48,7 +48,10 @@ dependencies {
     testFixturesAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
     testFixturesImplementation "org.slf4j:slf4j-api:$slf4jVersion"
-    testFixturesImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
+
+    testFixturesImplementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
+    testFixturesImplementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+    testFixturesImplementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
 
     testFixturesImplementation "org.hibernate:hibernate-core:$hibernateVersion"
     testFixturesImplementation "org.apache.derby:derby:$derbyVersion"
