#422 Remove parent Gradle build configuration and specify dependencies explicitly

--- a/hartshorn-commands/hartshorn-commands.gradle
+++ b/hartshorn-commands/hartshorn-commands.gradle
@@ -15,12 +15,14 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-apply from: "$rootDir/parent.gradle"
-
 dependencies {
-    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    implementation 'org.dockbox.hartshorn:hartshorn-di'
+    implementation 'org.dockbox.hartshorn:hartshorn-core'
+    implementation 'org.dockbox.hartshorn:hartshorn-util'
     implementation 'org.dockbox.hartshorn:hartshorn-i18n'
-    implementation 'org.dockbox.hartshorn:hartshorn-events'
     implementation 'org.dockbox.hartshorn:hartshorn-proxy'
     implementation 'org.dockbox.hartshorn:hartshorn-tasks'
+    implementation 'org.dockbox.hartshorn:hartshorn-events'
+    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    implementation 'org.dockbox.hartshorn:hartshorn-exceptions'
 }
