--- a/hartshorn-i18n/hartshorn-i18n.gradle
+++ b/hartshorn-i18n/hartshorn-i18n.gradle
@@ -15,11 +15,13 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-apply from: "$rootDir/parent.gradle"
-
 dependencies {
-    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    api 'org.dockbox.hartshorn:hartshorn-core'
+    api 'org.dockbox.hartshorn:hartshorn-persistence'
+    implementation 'org.dockbox.hartshorn:hartshorn-di'
+    implementation 'org.dockbox.hartshorn:hartshorn-util'
     implementation 'org.dockbox.hartshorn:hartshorn-proxy'
     implementation 'org.dockbox.hartshorn:hartshorn-config'
-    api 'org.dockbox.hartshorn:hartshorn-persistence'
+    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    implementation 'org.dockbox.hartshorn:hartshorn-exceptions'
 }
