--- a/hartshorn-persistence/hartshorn-persistence.gradle
+++ b/hartshorn-persistence/hartshorn-persistence.gradle
@@ -15,32 +15,28 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-apply from: "$rootDir/parent.gradle"
-
 dependencies {
-    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
-    implementation 'org.dockbox.hartshorn:hartshorn-proxy'
-
-    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
-    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
-    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-properties:$jacksonVersion"
-    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:$jacksonVersion"
-    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jacksonVersion"
-
-    implementation "org.codehaus.woodstox:woodstox-core-asl:$woodstoxVersion"
-
-    // SQL Extension dependencies
-    implementation "org.hibernate:hibernate-core:$hibernateVersion"
+    implementation 'org.dockbox.hartshorn:hartshorn-di'
+    implementation 'org.dockbox.hartshorn:hartshorn-util'
+    implementation 'org.dockbox.hartshorn:hartshorn-core'
     implementation "org.apache.derby:derby:$derbyVersion"
+    implementation 'org.dockbox.hartshorn:hartshorn-proxy'
+    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    implementation 'org.dockbox.hartshorn:hartshorn-exceptions'
+    implementation "org.hibernate:hibernate-core:$hibernateVersion"
+    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    implementation "org.codehaus.woodstox:woodstox-core-asl:$woodstoxVersion"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jacksonVersion"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:$jacksonVersion"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-properties:$jacksonVersion"
 
-    testImplementation "mysql:mysql-connector-java:$mySqlConnectorVersion"
     testImplementation "org.postgresql:postgresql:$postgreSqlVersion"
-    testImplementation "org.mariadb.jdbc:mariadb-java-client:$mariaDbClientVersion"
-
-    testImplementation "org.testcontainers:testcontainers:$testContainersVersion"
-    testImplementation "org.testcontainers:junit-jupiter:$testContainersVersion"
-
     testImplementation "org.testcontainers:mysql:$testContainersVersion"
-    testImplementation "org.testcontainers:postgresql:$testContainersVersion"
     testImplementation "org.testcontainers:mariadb:$testContainersVersion"
+    testImplementation "mysql:mysql-connector-java:$mySqlConnectorVersion"
+    testImplementation "org.testcontainers:postgresql:$testContainersVersion"
+    testImplementation "org.testcontainers:junit-jupiter:$testContainersVersion"
+    testImplementation "org.testcontainers:testcontainers:$testContainersVersion"
+    testImplementation "org.mariadb.jdbc:mariadb-java-client:$mariaDbClientVersion"
 }
