--- a/hartshorn-keys/hartshorn-keys.gradle
+++ b/hartshorn-keys/hartshorn-keys.gradle
@@ -15,10 +15,10 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-apply from: "$rootDir/parent.gradle"
-
 dependencies {
-    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
+    implementation 'org.dockbox.hartshorn:hartshorn-di'
+    implementation 'org.dockbox.hartshorn:hartshorn-core'
     implementation 'org.dockbox.hartshorn:hartshorn-i18n'
+    implementation 'org.dockbox.hartshorn:hartshorn-bootstrap'
     implementation 'org.dockbox.hartshorn:hartshorn-exceptions'
 }
