--- a/hartshorn-tasks/hartshorn-tasks.gradle
+++ b/hartshorn-tasks/hartshorn-tasks.gradle
@@ -15,4 +15,8 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-apply from: "$rootDir/parent.gradle"
+dependencies {
+    implementation 'org.dockbox.hartshorn:hartshorn-di'
+    implementation 'org.dockbox.hartshorn:hartshorn-core'
+    implementation 'org.dockbox.hartshorn:hartshorn-util'
+}
