--- a/hartshorn-web/hartshorn-web.gradle
+++ b/hartshorn-web/hartshorn-web.gradle
@@ -14,4 +14,7 @@ dependencies {
     implementation "org.eclipse.jetty:jetty-servlet:$jettyVersion"
     implementation "org.eclipse.jetty:jetty-server:$jettyVersion"
     api "javax.servlet:javax.servlet-api:$javaxServletVersion"
+    testImplementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+
 }
