--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,10 @@
 #  along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-pluginGroup=org.dockbox.hartshorn
-pluginId=hartshorn
-pluginName=Hartshorn
+projectGroup=org.dockbox.hartshorn
+projectId=hartshorn
+projectName=Hartshorn
+projectVersion=4.2.2
 
 # Dependency versions
 junitVersion=5.3.2
