--- a/gradle/publications.gradle
+++ b/gradle/publications.gradle
@@ -75,11 +75,11 @@ task copyPublications {
                     includes: "$project.name-$version*"
         }
 
-        file("$POM_SRC_DIR/pom-default.xml").renameTo(file("$POM_SRC_DIR/$project.name-pom.xml"))
+        file("$POM_SRC_DIR/pom-default.xml").renameTo(file("$POM_SRC_DIR/${project.name}.pom"))
 
         ant.copy(todir: DIST_DEST_DIR) {
             fileset dir: POM_SRC_DIR,
-                    includes: "$project.name-pom.xml"
+                    includes: "${project.name}.pom"
         }
 
     }
