--- a/hartshorn-cache/hartshorn-cache.gradle
+++ b/hartshorn-cache/hartshorn-cache.gradle
@@ -15,6 +15,8 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
+apply from: "$project.rootDir/gradle/publications.gradle"
+
 dependencies {
     implementation 'org.dockbox.hartshorn:hartshorn-core'
     implementation 'org.dockbox.hartshorn:hartshorn-tasks'
