#504 Java 9+ module migration draft

--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,16 @@ allprojects {
             }
         }
 
+        compileJava {
+            inputs.property('moduleName', project.name)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath
+                ]
+                classpath = files()
+            }
+        }
+
         repositories {
             mavenCentral()
             maven {
