#502 Change `javax.inject` dependency to Jakarta Inject API 2.0.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ reflectionsVersion=0.9.11
 hamcrestVersion=2.0.0.0
 hibernateVersion=5.5.5.Final
 javaxPersistenceVersion=2.2
-javaxInjectVersion=1
+jakartaInjectVersion=1.0.5
 javaxJaxbVersion=2.2.4
 lombokVersion=1.18.20
 discordPaginationVersion=2.1.1
