--- a/hartshorn-core/hartshorn-core.gradle
+++ b/hartshorn-core/hartshorn-core.gradle
@@ -18,7 +18,8 @@
 apply from: "$project.rootDir/gradle/publications.gradle"
 
 dependencies {
-    api "javax.inject:javax.inject:$javaxInjectVersion"
+    api "jakarta.inject:jakarta.inject-api:$jakartaInjectVersion"
+
     implementation "org.reflections:reflections:$reflectionsVersion"
     implementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
     implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
