#509 Add FreeMarker implementation for web MVC

--- a/hartshorn-web/hartshorn-web.gradle
+++ b/hartshorn-web/hartshorn-web.gradle
@@ -30,5 +30,7 @@ dependencies {
     implementation 'org.dockbox.hartshorn:hartshorn-persistence'
     implementation "org.eclipse.jetty:jetty-servlet:$jettyVersion"
     implementation "org.eclipse.jetty:jetty-server:$jettyVersion"
+    implementation 'org.freemarker:freemarker:2.3.31' // TODO version config
+
     testImplementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
