--- a/build.gradle
+++ b/build.gradle
@@ -134,12 +134,10 @@ allprojects {
             testImplementation testFixtures(project(":hartshorn-core"))
             testImplementation "org.mockito:mockito-inline:$mockitoVersion"
             testImplementation "org.hamcrest:java-hamcrest:$hamcrestVersion"
-            testImplementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
-            testImplementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+            testImplementation "ch.qos.logback:logback-classic:1.3.0-alpha10"
             testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
             testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
             testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-            testImplementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
         }
 
         task copyArtifacts {
