--- a/hartshorn-data/hartshorn-data.gradle
+++ b/hartshorn-data/hartshorn-data.gradle
@@ -34,6 +34,9 @@ dependencies {
     testImplementation "mysql:mysql-connector-java:$mySqlConnectorVersion"
     testImplementation "org.testcontainers:postgresql:$testContainersVersion"
     testImplementation "org.testcontainers:junit-jupiter:$testContainersVersion"
+    testImplementation "org.testcontainers:mssqlserver:$testContainersVersion"
     testImplementation "org.testcontainers:testcontainers:$testContainersVersion"
     testImplementation "org.mariadb.jdbc:mariadb-java-client:$mariaDbClientVersion"
+    testImplementation 'com.microsoft.sqlserver:mssql-jdbc:9.4.0.jre11'
+
 }
