--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,7 @@ allprojects {
             testImplementation testFixtures(project(":hartshorn-core"))
             testImplementation "org.mockito:mockito-inline:$mockitoVersion"
             testImplementation "org.hamcrest:java-hamcrest:$hamcrestVersion"
-            testImplementation "ch.qos.logback:logback-classic:1.3.0-alpha10"
+            testImplementation "ch.qos.logback:logback-classic:$logbackVersion"
             testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
             testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
             testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
