--- a/gradle.properties
+++ b/gradle.properties
@@ -47,6 +47,9 @@ log4jVersion=2.7
 javaxServletVersion=3.1.0
 jettyVersion=9.4.44.v20210927
 mssqlDriverVersion=9.4.0.jre11
+logbackVersion=1.3.0-alpha10
+freeMarkerVersion=2.3.31
+httpClientVersion=4.5.13
 
 # Gradle plugin versions
 licenserVersion=0.5.0
