--- a/hartshorn-core/hartshorn-core.gradle
+++ b/hartshorn-core/hartshorn-core.gradle
@@ -21,13 +21,13 @@ dependencies {
     api "jakarta.inject:jakarta.inject-api:$jakartaInjectVersion"
 
     implementation "org.reflections:reflections:$reflectionsVersion"
-    implementation "ch.qos.logback:logback-classic:1.3.0-alpha10"
+    implementation "ch.qos.logback:logback-classic:$logbackVersion"
 
     testFixturesImplementation "org.slf4j:slf4j-api:$slf4jVersion"
     testFixturesImplementation "org.projectlombok:lombok:$lombokVersion"
     testFixturesImplementation "org.mockito:mockito-inline:$mockitoVersion"
     testFixturesImplementation "org.hamcrest:java-hamcrest:$hamcrestVersion"
-    testFixturesImplementation "ch.qos.logback:logback-classic:1.3.0-alpha10"
+    testFixturesImplementation "ch.qos.logback:logback-classic:$logbackVersion"
     testFixturesImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testFixturesImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
 
