--- a/gradle.properties
+++ b/gradle.properties
@@ -20,40 +20,39 @@ projectId=hartshorn
 projectName=Hartshorn
 projectVersion=4.2.5
 
-# Dependency versions
-junitVersion=5.3.2
-mockitoVersion=3.10.0
-jetbrainsAnnotationsVersion=19.0.0
-jdaVersion=4.3.0_277
+# Core API versions
+jetbrainsAnnotationsVersion=23.0.0
 slf4jVersion=1.7.32
-reflectionsVersion=0.9.11
-hamcrestVersion=2.0.0.0
-hibernateVersion=5.5.5.Final
-javaxPersistenceVersion=2.2
+logbackVersion=1.2.10
+reflectionsVersion=0.10.2
 jakartaInjectVersion=1.0.5
-javaxJaxbVersion=2.2.4
-lombokVersion=1.18.20
-discordPaginationVersion=2.1.1
-jacksonVersion=2.12.3
-woodstoxVersion=4.4.1
-derbyVersion=10.8.2.2
-imageScalingVersion=0.8.6
-jhlabsFiltersVersion=2.0.235-1
-testContainersVersion=1.16.0
-mySqlConnectorVersion=8.0.26
-postgreSqlVersion=42.2.23
+lombokVersion=1.18.22
+
+# Testing API versions
+junitVersion=5.8.2
+mockitoVersion=4.2.0
+testContainersVersion=1.16.2
+hamcrestVersion=2.0.0.0
+
+# Data API versions
+hibernateVersion=5.6.3.Final
+javaxPersistenceVersion=2.2
+mySqlConnectorVersion=8.0.27
+postgreSqlVersion=42.3.1
 mariaDbClientVersion=2.7.4
-log4jVersion=2.7
-javaxServletVersion=3.1.0
-jettyVersion=9.4.44.v20210927
-mssqlDriverVersion=9.4.0.jre11
-logbackVersion=1.3.0-alpha10
+jacksonVersion=2.13.1
+woodstoxVersion=4.4.1
+derbyVersion=10.14.2.0
+mssqlDriverVersion=9.4.1.jre11
+
+# Web API versions
 freeMarkerVersion=2.3.31
 httpClientVersion=4.5.13
+javaxServletVersion=4.0.1
+jettyVersion=9.4.44.v20210927
 
 # Gradle plugin versions
-licenserVersion=0.5.0
-aggregateJavadocVersion=6.0.0-m2
-
-# Buildscript dependencies
-gradleLombokVersion=1.6
+licenserVersion=0.6.1
+owaspDependencyCheckVersion=6.5.1
+checkerFrameworkVersion=0.6.5
+gradleLombokVersion=5.0.0
