--- a/examples/src/persistence/resources/persistence-demo.yml
+++ b/examples/src/persistence/resources/persistence-demo.yml
@@ -1,8 +1,8 @@
-demo:
-  persistence:
-    db:
-      host: 'localhost'
-      port: 3306
-      database: 'persistence_demo'
-      user: 'root'
-      password: 'demo'
+hartshorn:
+  data:
+    hibernate:
+      dialect: 'org.hibernate.dialect.MySQL8Dialect'
+      driver_class: 'com.mysql.cj.jdbc.Driver'
+    username: 'root'
+    password: 'demo'
+    url: 'jdbc:mysql://localhost:3306/persistence_demo'
