#355 Update license headers on providers and add strict CI license checks

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ subprojects { final Project subProject ->
 
     license {
         header = rootProject.file("HEADER.txt")
-        ignoreFailures = true
+        ignoreFailures = false
         include '**/*.java'
     }
 
