#722 Correctly name Gradle OWASP dependency check workflow

--- a/.github/workflows/owasp.yml
+++ b/.github/workflows/owasp.yml
@@ -1,9 +1,10 @@
-name: Gradle dependency check
+name: Hartshorn
 
 on: pull_request
 
 jobs:
   depCheck:
+    name: Gradle dependency check
     runs-on: ubuntu-latest
 
     steps:
