#730 Allow for complex deserialization of dynamic configuration types

--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ allprojects {
 
         test {
             useJUnitPlatform()
+            maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
         }
 
         tasks.withType(Javadoc) {
