--- a/gradle.properties
+++ b/gradle.properties
@@ -53,3 +53,5 @@ jettyVersion=11.0.9
 licenserVersion=0.6.1
 owaspDependencyCheckVersion=7.1.0.1
 checkerFrameworkVersion=0.6.5
+
+caffeineVersion=3.1.0
